# Master-Thesis

./: .gitignore  README.md
Code/: .gitignore  Makefile  README.md
Code/backend/: README.md  pyproject.toml
Code/backend/scripts/: migrate_batches_registry.py  migrate_labels_registry.py  migrate_ontologies_registry.py  migrate_tables_registry.py
Code/backend/src/saed/: __init__.py
Code/backend/src/saed/api/: __init__.py  main.py  schemas.py
Code/backend/src/saed/api/routes/: __init__.py  batches.py  config.py  evaluations.py  labels.py  llm.py  ontologies.py  runs.py  tables.py
Code/backend/src/saed/cli/: batch.py  eval.py  run.py
Code/backend/src/saed/core/: __init__.py
Code/backend/src/saed/core/algorithms/: __init__.py
Code/backend/src/saed/core/annotator/: __init__.py  engine.py
Code/backend/src/saed/core/batches/: __init__.py  loader.py  registry.py
Code/backend/src/saed/core/config/: __init__.py  settings.py
Code/backend/src/saed/core/data/: __init__.py
Code/backend/src/saed/core/data/tables/: __init__.py
Code/backend/src/saed/core/evaluator/: __init__.py  metrics.py
Code/backend/src/saed/core/executor/: __init__.py  run_executor.py
Code/backend/src/saed/core/labels/: __init__.py  loader.py  registry.py
Code/backend/src/saed/core/llm/: __init__.py  client.py  parser.py  providers.py
Code/backend/src/saed/core/llm/prompts/: __init__.py  base.py  cot.py  direct.py
Code/backend/src/saed/core/ontology/: __init__.py  cache.py  classes.py  dag.py  registry.py  validator.py
Code/backend/src/saed/core/selector/: __init__.py  base.py
Code/backend/src/saed/core/table/: __init__.py  loader.py  registry.py  transform.py
Code/backend/src/saed/core/utils/: __init__.py  paths.py
Code/backend/tests/: conftest.py
Code/backend/tests/fixtures/: test_ontology.rdf
Code/backend/tests/integration/: test_api_ontologies.py
Code/backend/tests/unit/: test_ontology_classes.py  test_ontology_dag.py  test_ontology_validator.py
Code/data/: README.md  config.example.json
Code/experiments/: run.sh  run_litellm.sh  run_ollama.sh
Code/frontend/: README.md  package.json  pnpm-lock.yaml
Thesis/: .gitignore  Makefile  README.md  bibliography.bib  thesis.tex
Thesis/abstract/: english.tex  german.tex
Thesis/appendices/: Appendix.tex
Thesis/chapters/: Conclusion.tex  Evaluation.tex  Introduction.tex  Methods.tex  (+3 more)
(+54 files in other folders)
